--- a/src/app/components/supporting-information/supporting-information.component.html
+++ b/src/app/components/supporting-information/supporting-information.component.html
@@ -2,152 +2,150 @@
 <div class="scrollable-container" style="padding-top: 1em">
 
   <form [formGroup]="supportingInformationForm">
-     @if(serviceType == DIABETES_PREVENTION){
-        <div class="row" style="background-color: var(--primary100); margin-bottom: 1em; padding: 1em 1em 1em 1em">
-          Vital Signs
-        </div>
+    @if (serviceType == DIABETES_PREVENTION) {
+      <div class="row" style="background-color: var(--primary100); margin-bottom: 1em; padding: 1em 1em 1em 1em">
+        Vital Signs
+      </div>
 
-        <div class="row">
-          <div class="col">
-            <mat-form-field appearance="outline" style="width: 40%; margin-right: 0.5em">
-              <mat-label>Height</mat-label>
-              <input type="number" matInput formControlName="heightValue">
-            </mat-form-field>
-
-            <mat-form-field appearance="outline" style="width:30%;">
-              <mat-label>Unit</mat-label>
-              <mat-select formControlName="heightUnit">
-                <mat-option *ngFor="let unit of fhirConstants.HEIGHT_UNITS" [value]="unit">
-                  {{unit.display}}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
-
-          <div class="col">
-            <mat-form-field appearance="outline" style="width: 40%; margin-right: 0.5em;">
-              <mat-label>Weight</mat-label>
-              <input type="number" matInput formControlName="weightValue">
-            </mat-form-field>
-
-            <mat-form-field appearance="outline" style="width:30%;">
-              <mat-label>Unit</mat-label>
-              <mat-select formControlName="weightUnit">
-                <mat-option *ngFor="let unit of fhirConstants.WEIGHT_UNITS" [value]="unit">
-                  {{unit.display}}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
-
-          <div class="col">
-            <mat-form-field appearance="outline" style="width: 70%;">
-              <mat-label>BMI</mat-label>
-              <span matSuffix>kg/m²</span>
-              <input matInput type="number" formControlName="bmi">
-            </mat-form-field>
-          </div>
-
-          <div class="col">
-            <mat-form-field appearance="outline" style="width: 45%;">
-              <mat-label>BP (SYS)</mat-label>
-              <span matSuffix>mmHg</span>
-              <input matInput type="number" formControlName="bpSystolic">
-            </mat-form-field>
-
-            <span
-              style="margin-right: 0.2em;  margin-top: 2em; margin-left: 0.2em; font-weight: bold; font-size: x-large">/</span>
-
-            <mat-form-field appearance="outline" style="width: 45%">
-              <mat-label>BP (DIA)</mat-label>
-              <span matSuffix>mmHg</span>
-              <input matInput type="number" formControlName="bpDiastolic">
-            </mat-form-field>
-          </div>
-
-        </div>
-
-        <div class="row" style="background-color: var(--primary100); margin-bottom: 1em; padding: 1em 1em 1em 1em">
-          Lab Work
-        </div>
-
-        <div class="row" style="width: 40%;">
-
-          <mat-form-field appearance="outline">
-            <mat-label>HA1C</mat-label>
-            <span matSuffix>%</span>
-            <input matInput type="number" formControlName="ha1c">
+      <div class="row">
+        <div class="col">
+          <mat-form-field appearance="outline" style="width: 40%; margin-right: 0.5em">
+            <mat-label>Height</mat-label>
+            <input type="number" matInput formControlName="heightValue">
           </mat-form-field>
 
+          <mat-form-field appearance="outline" style="width:30%;">
+            <mat-label>Unit</mat-label>
+            <mat-select formControlName="heightUnit">
+              <mat-option *ngFor="let unit of fhirConstants.HEIGHT_UNITS" [value]="unit">
+                {{ unit.display }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
         </div>
 
-      }
+        <div class="col">
+          <mat-form-field appearance="outline" style="width: 40%; margin-right: 0.5em;">
+            <mat-label>Weight</mat-label>
+            <input type="number" matInput formControlName="weightValue">
+          </mat-form-field>
 
-     @else{
-       <div class="row" style="background-color: var(--primary100); margin-bottom: 1em; padding: 1em 1em 1em 1em">
-         Vital Signs
-       </div>
+          <mat-form-field appearance="outline" style="width:30%;">
+            <mat-label>Unit</mat-label>
+            <mat-select formControlName="weightUnit">
+              <mat-option *ngFor="let unit of fhirConstants.WEIGHT_UNITS" [value]="unit">
+                {{ unit.display }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
 
-       <div class="row">
-         <div class="col">
-           <mat-form-field appearance="outline" style="width: 40%; margin-right: 0.5em">
-             <mat-label>Height</mat-label>
-             <input type="number" matInput formControlName="heightValue">
-           </mat-form-field>
+        <div class="col">
+          <mat-form-field appearance="outline" style="width: 70%;">
+            <mat-label>BMI</mat-label>
+            <span matSuffix>kg/m²</span>
+            <input matInput type="number" formControlName="bmi">
+          </mat-form-field>
+        </div>
 
-           <mat-form-field appearance="outline" style="width:30%;">
-             <mat-label>Unit</mat-label>
-             <mat-select formControlName="heightUnit">
-               <mat-option *ngFor="let unit of fhirConstants.HEIGHT_UNITS" [value]="unit">
-                 {{unit.display}}
-               </mat-option>
-             </mat-select>
-           </mat-form-field>
-         </div>
+        <div class="col">
+          <mat-form-field appearance="outline" style="width: 45%;">
+            <mat-label>BP (SYS)</mat-label>
+            <span matSuffix>mmHg</span>
+            <input matInput type="number" formControlName="bpSystolic">
+          </mat-form-field>
 
-         <div class="col">
-           <mat-form-field appearance="outline" style="width: 40%; margin-right: 0.5em;">
-             <mat-label>Weight</mat-label>
-             <input type="number" matInput formControlName="weightValue">
-           </mat-form-field>
+          <span
+            style="margin-right: 0.2em;  margin-top: 2em; margin-left: 0.2em; font-weight: bold; font-size: x-large">/</span>
 
-           <mat-form-field appearance="outline" style="width:30%;">
-             <mat-label>Unit</mat-label>
-             <mat-select formControlName="weightUnit">
-               <mat-option *ngFor="let unit of fhirConstants.WEIGHT_UNITS" [value]="unit">
-                 {{unit.display}}
-               </mat-option>
-             </mat-select>
-           </mat-form-field>
-         </div>
+          <mat-form-field appearance="outline" style="width: 45%">
+            <mat-label>BP (DIA)</mat-label>
+            <span matSuffix>mmHg</span>
+            <input matInput type="number" formControlName="bpDiastolic">
+          </mat-form-field>
+        </div>
 
-         <div class="col">
-           <mat-form-field appearance="outline" style="width: 70%;">
-             <mat-label>BMI</mat-label>
-             <span matSuffix>kg/m²</span>
-             <input matInput type="number" formControlName="bmi">
-           </mat-form-field>
-         </div>
+      </div>
 
-         <div class="col">
-           <mat-form-field appearance="outline" style="width: 45%;">
-             <mat-label>BP (SYS)</mat-label>
-             <span matSuffix>mmHg</span>
-             <input matInput type="number" formControlName="bpSystolic">
-           </mat-form-field>
+      <div class="row" style="background-color: var(--primary100); margin-bottom: 1em; padding: 1em 1em 1em 1em">
+        Lab Work
+      </div>
 
-           <span
-             style="margin-right: 0.2em;  margin-top: 2em; margin-left: 0.2em; font-weight: bold; font-size: x-large">/</span>
+      <div class="row" style="width: 40%;">
 
-           <mat-form-field appearance="outline" style="width: 45%">
-             <mat-label>BP (DIA)</mat-label>
-             <span matSuffix>mmHg</span>
-             <input matInput type="number" formControlName="bpDiastolic">
-           </mat-form-field>
-         </div>
-       </div>
-     }
-<!-- //  }-->
+        <mat-form-field appearance="outline">
+          <mat-label>HA1C</mat-label>
+          <span matSuffix>%</span>
+          <input matInput type="number" formControlName="ha1c">
+        </mat-form-field>
+
+      </div>
+
+    } @else {
+      <div class="row" style="background-color: var(--primary100); margin-bottom: 1em; padding: 1em 1em 1em 1em">
+        Vital Signs
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <mat-form-field appearance="outline" style="width: 40%; margin-right: 0.5em">
+            <mat-label>Height</mat-label>
+            <input type="number" matInput formControlName="heightValue">
+          </mat-form-field>
+
+          <mat-form-field appearance="outline" style="width:30%;">
+            <mat-label>Unit</mat-label>
+            <mat-select formControlName="heightUnit">
+              <mat-option *ngFor="let unit of fhirConstants.HEIGHT_UNITS" [value]="unit">
+                {{ unit.display }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+
+        <div class="col">
+          <mat-form-field appearance="outline" style="width: 40%; margin-right: 0.5em;">
+            <mat-label>Weight</mat-label>
+            <input type="number" matInput formControlName="weightValue">
+          </mat-form-field>
+
+          <mat-form-field appearance="outline" style="width:30%;">
+            <mat-label>Unit</mat-label>
+            <mat-select formControlName="weightUnit">
+              <mat-option *ngFor="let unit of fhirConstants.WEIGHT_UNITS" [value]="unit">
+                {{ unit.display }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+
+        <div class="col">
+          <mat-form-field appearance="outline" style="width: 70%;">
+            <mat-label>BMI</mat-label>
+            <span matSuffix>kg/m²</span>
+            <input matInput type="number" formControlName="bmi">
+          </mat-form-field>
+        </div>
+
+        <div class="col">
+          <mat-form-field appearance="outline" style="width: 45%;">
+            <mat-label>BP (SYS)</mat-label>
+            <span matSuffix>mmHg</span>
+            <input matInput type="number" formControlName="bpSystolic">
+          </mat-form-field>
+
+          <span
+            style="margin-right: 0.2em;  margin-top: 2em; margin-left: 0.2em; font-weight: bold; font-size: x-large">/</span>
+
+          <mat-form-field appearance="outline" style="width: 45%">
+            <mat-label>BP (DIA)</mat-label>
+            <span matSuffix>mmHg</span>
+            <input matInput type="number" formControlName="bpDiastolic">
+          </mat-form-field>
+        </div>
+      </div>
+    }
+    <!-- //  }-->
   </form>
 
 </div>
