Refactored code for diabetes prevention

--- a/src/app/components/supporting-information/supporting-information.component.html
+++ b/src/app/components/supporting-information/supporting-information.component.html
@@ -41,26 +41,27 @@
         </div>
 
         <div class="col">
-          <mat-form-field appearance="outline" style="width: 70%;">
+          <mat-form-field appearance="outline">
             <mat-label>BMI</mat-label>
-            <span matSuffix>kg/m²</span>
+            <span matSuffix class="margin-sm">kg/m²</span>
             <input matInput type="number" formControlName="bmi">
           </mat-form-field>
         </div>
-
+      </div>
+      <div class="row">
         <div class="col">
-          <mat-form-field appearance="outline" style="width: 45%;">
+          <mat-form-field appearance="outline" style="max-width: 20%;">
             <mat-label>BP (SYS)</mat-label>
-            <span matSuffix>mmHg</span>
+            <span matSuffix class="margin-sm">mmHg</span>
             <input matInput type="number" formControlName="bpSystolic">
           </mat-form-field>
 
           <span
             style="margin-right: 0.2em;  margin-top: 2em; margin-left: 0.2em; font-weight: bold; font-size: x-large">/</span>
 
-          <mat-form-field appearance="outline" style="width: 45%">
+          <mat-form-field appearance="outline" style="max-width: 20%">
             <mat-label>BP (DIA)</mat-label>
-            <span matSuffix>mmHg</span>
+            <span matSuffix class="margin-sm">mmHg</span>
             <input matInput type="number" formControlName="bpDiastolic">
           </mat-form-field>
         </div>
@@ -75,7 +76,7 @@
 
         <mat-form-field appearance="outline">
           <mat-label>HA1C</mat-label>
-          <span matSuffix>%</span>
+          <span matSuffix class="margin-sm">%</span>
           <input matInput type="number" formControlName="ha1c">
         </mat-form-field>
 
@@ -122,24 +123,25 @@
         <div class="col">
           <mat-form-field appearance="outline" style="width: 70%;">
             <mat-label>BMI</mat-label>
-            <span matSuffix>kg/m²</span>
+            <span matSuffix class="margin-sm">kg/m²</span>
             <input matInput type="number" formControlName="bmi">
           </mat-form-field>
         </div>
-
+      </div>
+      <div class="row">
         <div class="col">
-          <mat-form-field appearance="outline" style="width: 45%;">
+          <mat-form-field appearance="outline" style="width: 20%;">
             <mat-label>BP (SYS)</mat-label>
-            <span matSuffix>mmHg</span>
+            <span matSuffix class="margin-sm">mmHg</span>
             <input matInput type="number" formControlName="bpSystolic">
           </mat-form-field>
 
           <span
             style="margin-right: 0.2em;  margin-top: 2em; margin-left: 0.2em; font-weight: bold; font-size: x-large">/</span>
 
-          <mat-form-field appearance="outline" style="width: 45%">
+          <mat-form-field appearance="outline" style="width: 20%">
             <mat-label>BP (DIA)</mat-label>
-            <span matSuffix>mmHg</span>
+            <span matSuffix class="margin-sm">mmHg</span>
             <input matInput type="number" formControlName="bpDiastolic">
           </mat-form-field>
         </div>
