--- a/src/app/components/general-information-and-service-type/general-information-and-service-type.component.html
+++ b/src/app/components/general-information-and-service-type/general-information-and-service-type.component.html
@@ -3,7 +3,9 @@
   <form [formGroup]="generalInfoServiceTypeForm">
 
     <mat-card>
-      <mat-card-title>Service Type Info</mat-card-title>
+      <mat-card-header>
+        <mat-card-title>Service Type Info</mat-card-title>
+      </mat-card-header>
       <mat-card-content>
         <div class="row" style="margin-top: 2em">
           <mat-form-field appearance="outline" style="width: 40%">
@@ -30,7 +32,9 @@
     </mat-card>
 
     <mat-card style="margin-top: 2em">
-      <mat-card-title>Additional Patient Demographics</mat-card-title>
+      <mat-card-header>
+        <mat-card-title>Additional Patient Demographics</mat-card-title>
+      </mat-card-header>
       <mat-card-content>
         <div class="row"></div>
         <div class="row" style="margin-top: 1em">
