--- a/src/app/components/service-provider/service-provider.component.html
+++ b/src/app/components/service-provider/service-provider.component.html
@@ -1,16 +1,19 @@
 <mat-card [ngClass]="{'selected-mat-card': serviceProvider.selected}" class="mat-elevation-z3">
-  <mat-card-title [ngStyle]="{'color':serviceProvider.selected ? '#0d47a1' : '' }">
-    <div *ngIf="serviceProvider.practitioner?.familyName; then practitionerFound else noPractitionerFound"></div>
-    <ng-template #practitionerFound>
-      {{serviceProvider.practitioner?.familyName}}, {{serviceProvider.practitioner?.givenName}} ({{serviceProvider.organization?.name}})
-    </ng-template>
-    <ng-template #noPractitionerFound>
-      {{serviceProvider.organization?.name}}
-    </ng-template>
-  </mat-card-title>
+  <mat-card-header>
+    <mat-card-title [ngStyle]="{'color':serviceProvider.selected ? '#0d47a1' : '' }">
+      <div *ngIf="serviceProvider.practitioner?.familyName; then practitionerFound else noPractitionerFound"></div>
+      <ng-template #practitionerFound>
+        {{ serviceProvider.practitioner?.familyName }}, {{ serviceProvider.practitioner?.givenName }}
+        ({{ serviceProvider.organization?.name }})
+      </ng-template>
+      <ng-template #noPractitionerFound>
+        {{ serviceProvider.organization?.name }}
+      </ng-template>
+    </mat-card-title>
+    <mat-card-subtitle>{{ serviceProvider?.description }}</mat-card-subtitle>
+  </mat-card-header>
 
 
-  <mat-card-subtitle>{{ serviceProvider?.description }}</mat-card-subtitle>
   <mat-card-content>
 
     <div class="row">
