removed repeated api calls

--- a/src/app/components/referral-details/referral-details.component.html
+++ b/src/app/components/referral-details/referral-details.component.html
@@ -24,7 +24,7 @@
 
       <!--Observations Section-->
       <div class="margin-top-md large-text">
-        Supporting Information:
+        Initial Supporting Information:
       </div>
       @if(!(mappedObservations?.mappedSimpleObservations?.length > 1)
           &&
@@ -51,6 +51,9 @@
           }
         }
       }
+      <div class="margin-top-md large-text">
+        Additional Supporting Information:
+      </div>
     </mat-card-content>
   </mat-card>
 </div>
