--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     <mat-toolbar color=primary style="color: white">
       <span style="cursor: pointer"  [routerLink]="'/'">BSeR Referral Manager</span>
       <span class="spacer"></span>
+      <div class="version-label">Version: {{ version }}</div>
       <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu">
         <mat-icon>more_vert</mat-icon>
       </button>
