--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -29,4 +29,12 @@ body,
   flex: 1 1 auto;
 }
 
+.version-label {
+  display: flex;
+  font-weight: bold;
+  font-size: small;
+  margin: 5px;
+  justify-content: flex-end;
+}
+
 
