--- a/src/app/components/general-information-and-service-type/general-information-and-service-type.component.html
+++ b/src/app/components/general-information-and-service-type/general-information-and-service-type.component.html
@@ -67,13 +67,13 @@
 
               <!-- radio buttons -->
               <mat-radio-group formControlName="raceCategoriesListRadioBtns" class="radio-group">
-                <mat-list-item *ngFor="let raceCategory of fhirConstants.RACE_CATEGORIES.slice(-2)">
+                @for (raceCategory of fhirConstants.RACE_CATEGORIES.slice(-2); track raceCategory) {
                   <mat-radio-button
-                    [value]=raceCategory style="margin-top: 1em; margin-left: 1em"
-                    (change)="onRaceCategoryRadioBtnChange($event)">
-                    {{raceCategory.display}}
-                  </mat-radio-button>
-                </mat-list-item>
+                    style="margin-top: 1em; margin-left: 1em"
+                    (change)="onRaceCategoryRadioBtnChange($event)"
+                    [value]="raceCategory">
+                    {{raceCategory.display}}</mat-radio-button>
+                }
               </mat-radio-group>
 
               <mat-error *ngIf="!isRaceSelected()
@@ -92,11 +92,9 @@
             </div>
             <div>
               <mat-radio-group formControlName="ethnicity" class="radio-group">
-                <mat-list-item *ngFor="let ethnicGroup of fhirConstants.ETHNICITY">
-                  <mat-radio-button [value]=ethnicGroup style="margin-top: 1em; margin-left: 1em">
-                    {{ethnicGroup.display}}
-                  </mat-radio-button>
-                </mat-list-item>
+                @for (ethnicGroup of fhirConstants.ETHNICITY; track ethnicGroup) {
+                  <mat-radio-button class="example-radio-button" [value]="ethnicGroup">{{ethnicGroup.display}}</mat-radio-button>
+                }
               </mat-radio-group>
             </div>
             <mat-error *ngIf="isControlValid('ethnicity', 'required')" style="font-size: 75%;">
