--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -17,7 +17,7 @@
         [serviceRequest]="draftServiceRequests"
         [isLoading]="isLoading"
         [serviceRequestType]="selectedServiceRequestType"
-        (serviceRequestDeletedEvent)="draftServiceRequests"
+        (serviceRequestDeletedEvent)="getServiceRequests()"
       ></app-service-request-list>
     </mat-tab>
 
@@ -26,7 +26,7 @@
         [serviceRequest]="activeServiceRequests"
         [isLoading]="isLoading"
         [serviceRequestType]="selectedServiceRequestType"
-        (serviceRequestDeletedEvent)="activeServiceRequests"
+        (serviceRequestDeletedEvent)="getServiceRequests()"
       ></app-service-request-list>
     </mat-tab>
 
@@ -35,7 +35,7 @@
         [serviceRequest]="completeServiceRequests"
         [isLoading]="isLoading"
         [serviceRequestType]="selectedServiceRequestType"
-        (serviceRequestDeletedEvent)="completeServiceRequests"
+        (serviceRequestDeletedEvent)="getServiceRequests()"
       ></app-service-request-list>
     </mat-tab>
 
