begun total code refactoring

--- a/src/app/components/referral-manager/referral-manager.component.html
+++ b/src/app/components/referral-manager/referral-manager.component.html
@@ -12,6 +12,7 @@
               (requestStep)="onRequestStep($event)"
               (savedSuccessEvent)="onSaveProvider($event)"
               (serviceProviderSelectedEvent)="onServiceProviderSelected($event)"
+              [currentSnapshot]="currentSnapshot"
             ></app-service-provider-list>
           </div>
         </mat-step>
