--- a/src/app/components/service-request-list/service-request-list.component.html
+++ b/src/app/components/service-request-list/service-request-list.component.html
@@ -2,7 +2,7 @@
 
   <ng-container matColumnDef="service">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Service</th>
-    <td mat-cell *matCellDef="let element"> {{ element.service }}</td>
+    <td mat-cell *matCellDef="let element"> {{ element.service || 'No Service Selected' }}</td>
   </ng-container>
 
   <ng-container matColumnDef="serviceProvider">
