Commit in a healthy state. Still need to clear up some errors

--- a/src/app/components/review-and-send/review-and-send.component.html
+++ b/src/app/components/review-and-send/review-and-send.component.html
@@ -32,7 +32,7 @@
               Service Type:
             </div>
             <div class="col value big-value">
-              {{ getValueCodeParam(currentParameters, 'serviceType')?.display }}
+              {{ serviceType }}
             </div>
           </div>
         </mat-card-content>
@@ -51,7 +51,7 @@
               Race:
             </div>
             <div class="col value col-grow">
-              {{ getValueCodeParam(currentParameters, 'race') }}
+              {{ race }}
             </div>
           </div>
           <div class="row">
@@ -59,7 +59,7 @@
               Ethnicity:
             </div>
             <div class="col value col-grow">
-              {{ getValueCodeParam(currentParameters,'ethnicity')?.display }}
+              {{ educationLevel }}
             </div>
           </div>
           <div class="row">
@@ -67,7 +67,7 @@
               Education Level:
             </div>
             <div class="col value col-grow">
-              {{ getValueCodeParam(currentParameters, 'educationLevel')?.display }}
+              {{ educationLevel }}
             </div>
           </div>
           <div class="row">
@@ -75,7 +75,7 @@
               Employment Status:
             </div>
             <div class="col value col-grow">
-              {{ getValueCodeParam(currentParameters, 'employmentStatus')?.display }}
+              {{ educationLevel }}
             </div>
           </div>
         </mat-card-content>
@@ -94,7 +94,7 @@
               Patient Height:
             </div>
             <div class="col value col-grow">
-              {{ getValueCodeParam(currentParameters, 'bodyHeight') }}
+              {{ bodyHeight }}
             </div>
           </div>
           <div class="row">
@@ -102,7 +102,7 @@
               Patient Weight:
             </div>
             <div class="col value col-grow">
-              {{ getValueCodeParam(currentParameters, 'bodyWeight') }}
+              {{ bodyWeight }}
             </div>
           </div>
           <div class="row">
@@ -110,7 +110,7 @@
               BMI:
             </div>
             <div class="col value col-grow">
-              {{ getValueCodeParam(currentParameters, 'bmi') }}
+              {{ bmi }}
             </div>
           </div>
           <div class="row">
@@ -118,7 +118,7 @@
               Blood Pressure:
             </div>
             <div class="col value col-grow">
-              {{ getValueCodeParam(currentParameters, 'bloodPressure') }}
+              {{ bloodPressure }}
             </div>
           </div>
         </mat-card-content>
@@ -137,7 +137,7 @@
               HA1C:
             </div>
             <div class="col value col-grow">
-              {{ getValueCodeParam(currentParameters, 'ha1c') }}
+              {{ ha1c }}
             </div>
           </div>
         </mat-card-content>
