--- a/src/app/components/referral-manager/referral-manager.component.html
+++ b/src/app/components/referral-manager/referral-manager.component.html
@@ -6,19 +6,18 @@
       <mat-stepper linear #stepper>
 
         <!-- Select a Provider (for example YMCA) -->
-        <mat-step label="Select Recipient" [completed]='isStepCompleted(1)'  [editable]="stepsEnabled">
-          <div>
-            <app-service-provider-list
-              (requestStep)="onRequestStep($event)"
-              (savedSuccessEvent)="onSaveProvider($event)"
-              (serviceProviderSelectedEvent)="onServiceProviderSelected($event)"
-              [serviceRequest]="currentSnapshot"
-            ></app-service-provider-list>
-          </div>
+        <mat-step label="Select Recipient" [completed]='isStepCompleted(1)' [editable]="stepsEnabled">
+          <app-service-provider-list
+            (requestStep)="onRequestStep($event)"
+            (savedSuccessEvent)="onSaveProvider($event)"
+            (serviceProviderSelectedEvent)="onServiceProviderSelected($event)"
+            [serviceRequest]="currentSnapshot"
+          ></app-service-provider-list>
         </mat-step>
 
         <!-- Select supporting information -->
-        <mat-step label="General Information and Service Type" [completed]='isStepCompleted(2)' [editable]="stepsEnabled">
+        <mat-step label="General Information and Service Type" [completed]='isStepCompleted(2)'
+                  [editable]="stepsEnabled">
           <app-general-information-and-service-type
             (savedSuccessEvent)="onSaveGeneralInfoAndServiceType($event)"
             (requestStepEvent)="onRequestStep($event)"
@@ -30,24 +29,25 @@
 
         <!-- Add Patient general information -->
         <mat-step label="Supporting Information" [completed]='isStepCompleted(3)' [editable]="stepsEnabled">
-          <div>
-            <app-supporting-information
-              (savedSuccessEvent)="onSaveSupportingInfo($event)"
-              (requestStepEvent)="onRequestStep($event)"
-              [selectedServiceProvider]="selectedServiceProvider"
-            >
-            </app-supporting-information>
-          </div>
+          <app-supporting-information
+            (savedSuccessEvent)="onSaveSupportingInfo($event)"
+            (requestStepEvent)="onRequestStep($event)"
+            [selectedServiceProvider]="selectedServiceProvider"
+            [serviceRequest]="currentSnapshot"
+            [parameters]="currentParameters"
+          >
+          </app-supporting-information>
         </mat-step>
 
+        <!-- Review information before sending to the BSeR engine -->
         <mat-step label="Review and Send" [completed]='isStepCompleted(4)'>
-          <div>
-            <app-review-and-send
-              [selectedServiceProvider]="selectedServiceProvider"
-              (returnToEditEvent)="onRequestStep($event)"
-            >
-            </app-review-and-send>
-          </div>
+          <app-review-and-send
+            [selectedServiceProvider]="selectedServiceProvider"
+            (returnToEditEvent)="onRequestStep($event)"
+            [serviceRequest]="currentSnapshot"
+            [parameters]="currentParameters"
+          >
+          </app-review-and-send>
         </mat-step>
 
       </mat-stepper>
@@ -59,6 +59,8 @@
 </div>
 
 <div class="overlay" *ngIf="isLoading">
-  <div class="spinner-container"><mat-spinner [diameter]="70"></mat-spinner></div>
+  <div class="spinner-container">
+    <mat-spinner [diameter]="70"></mat-spinner>
+  </div>
 </div>
 
