--- a/src/app/components/referral-manager/referral-manager.component.html
+++ b/src/app/components/referral-manager/referral-manager.component.html
@@ -7,47 +7,55 @@
 
         <!-- Select a Provider (for example YMCA) -->
         <mat-step label="Select Recipient" [completed]='isStepCompleted(1)' [editable]="stepsEnabled">
-          <app-service-provider-list
-            (requestStep)="onRequestStep($event)"
-            (savedSuccessEvent)="onSaveProvider($event)"
-            (serviceProviderSelectedEvent)="onServiceProviderSelected($event)"
-            [serviceRequest]="currentSnapshot"
-          ></app-service-provider-list>
+          @if (stepper.selectedIndex == 0) {
+            <app-service-provider-list
+              (requestStep)="onRequestStep($event)"
+              (savedSuccessEvent)="onSaveProvider($event)"
+              (serviceProviderSelectedEvent)="onServiceProviderSelected($event)"
+              [serviceRequest]="serviceRequest"
+            ></app-service-provider-list>
+          }
         </mat-step>
 
         <!-- Select supporting information -->
         <mat-step label="General Information and Service Type" [completed]='isStepCompleted(2)'
                   [editable]="stepsEnabled">
-          <app-general-information-and-service-type
-            (savedSuccessEvent)="onSaveGeneralInfoAndServiceType($event)"
-            (requestStepEvent)="onRequestStep($event)"
-            [selectedServiceProvider]="selectedServiceProvider"
-            [serviceRequest]="currentSnapshot"
-            [parameters]="currentParameters"
-          ></app-general-information-and-service-type>
+          @if (stepper.selectedIndex == 1) {
+            <app-general-information-and-service-type
+              (savedSuccessEvent)="onSaveGeneralInfoAndServiceType($event)"
+              (requestStepEvent)="onRequestStep($event)"
+              [selectedServiceProvider]="selectedServiceProvider"
+              [serviceRequest]="serviceRequest"
+              [parameters]="parameters"
+            ></app-general-information-and-service-type>
+          }
         </mat-step>
 
         <!-- Add Patient general information -->
         <mat-step label="Supporting Information" [completed]='isStepCompleted(3)' [editable]="stepsEnabled">
-          <app-supporting-information
-            (savedSuccessEvent)="onSaveSupportingInfo($event)"
-            (requestStepEvent)="onRequestStep($event)"
-            [selectedServiceProvider]="selectedServiceProvider"
-            [serviceRequest]="currentSnapshot"
-            [parameters]="currentParameters"
-          >
-          </app-supporting-information>
+          @if (stepper.selectedIndex == 2) {
+            <app-supporting-information
+              (savedSuccessEvent)="onSaveSupportingInfo($event)"
+              (requestStepEvent)="onRequestStep($event)"
+              [selectedServiceProvider]="selectedServiceProvider"
+              [serviceRequest]="serviceRequest"
+              [parameters]="parameters"
+            >
+            </app-supporting-information>
+          }
         </mat-step>
 
         <!-- Review information before sending to the BSeR engine -->
         <mat-step label="Review and Send" [completed]='isStepCompleted(4)'>
-          <app-review-and-send
-            [selectedServiceProvider]="selectedServiceProvider"
-            (returnToEditEvent)="onRequestStep($event)"
-            [serviceRequest]="currentSnapshot"
-            [parameters]="currentParameters"
-          >
-          </app-review-and-send>
+          @if (stepper.selectedIndex == 3) {
+            <app-review-and-send
+              [selectedServiceProvider]="selectedServiceProvider"
+              (returnToEditEvent)="onRequestStep($event)"
+              [serviceRequest]="serviceRequest"
+              [parameters]="parameters"
+            >
+            </app-review-and-send>
+          }
         </mat-step>
 
       </mat-stepper>
