--- a/src/app/components/service-provider-list/service-provider-list.component.html
+++ b/src/app/components/service-provider-list/service-provider-list.component.html
@@ -4,39 +4,47 @@
   </mat-card-header>
   <mat-card-content>
     <!--If a service provider is selected, render the provider information-->
-    <div *ngIf="selectedServiceProvider" style="color: #0d47a1">
-      <span *ngIf="selectedServiceProvider.practitioner?.familyName; then practitionerFound else noPractitionerFound"></span>
-      <ng-template #practitionerFound>
-        {{selectedServiceProvider.practitioner?.familyName}}, {{selectedServiceProvider.practitioner?.givenName}} ({{selectedServiceProvider.organization?.name}})
-      </ng-template>
-      <ng-template #noPractitionerFound>
-        {{selectedServiceProvider.organization?.name}}
-      </ng-template>
-    </div>
+    @if (selectedServiceProvider) {
+      <div style="color: #0d47a1">
+        @if (selectedServiceProvider.practitioner?.familyName) {
+          {{selectedServiceProvider.practitioner?.familyName}}, {{selectedServiceProvider.practitioner?.givenName}} ({{selectedServiceProvider.organization?.name}})
+        } @else {
+          {{selectedServiceProvider.organization?.name}}
+        }
+      </div>
+    }
     <!--If no service provider is selected prompt the user to select one-->
-    <div *ngIf="!selectedServiceProvider">Please select a service provider from the list below.</div>
+    @if (!selectedServiceProvider) {
+      <div>Please select a service provider from the list below.</div>
+    }
 
   </mat-card-content>
 </mat-card>
 
 <div class="scrollable-container">
-  <div *ngIf="isLoading" class="loading" style="margin-top: 1em">
-    Loading Service Providers
-  </div>
-  <div *ngIf="!isLoading && !serviceProviders?.length" style="margin-top: 1em">
-    No service providers found.
-  </div>
-  <div *ngFor="let serviceProvider of serviceProviders">
-    <div style="margin-bottom: 1em; margin-top: 1em">
-      <app-service-provider
-        [serviceProvider]=serviceProvider
-        (selectedProviderEvent)="onSelectedServiceProvider($event)"
-      >
-      </app-service-provider>
+  @if (isLoading) {
+    <div class="loading" style="margin-top: 1em">
+      Loading Service Providers
     </div>
-  </div>
+  }
+  @if (!isLoading && !serviceProviders?.length) {
+    <div style="margin-top: 1em">
+      No service providers found.
+    </div>
+  }
+  @for (serviceProvider of serviceProviders; track serviceProvider) {
+    <div>
+      <div style="margin-bottom: 1em; margin-top: 1em">
+        <app-service-provider
+          [serviceProvider]=serviceProvider
+          (selectedProviderEvent)="onSelectedServiceProvider($event)"
+          >
+        </app-service-provider>
+      </div>
+    </div>
+  }
 
-<!--  <pre>{{serviceProviders | json}}</pre>-->
+  <!--  <pre>{{serviceProviders | json}}</pre>-->
 </div>
 
 <div class="row-button-wrapper">
@@ -44,7 +52,7 @@
   <span class="spacer"></span>
   <button mat-raised-button (click)="onSave()" [disabled]="!selectedServiceProvider">Save</button>
   <button mat-raised-button color="primary" [disabled]="!selectedServiceProvider" (click)="onProceed()"
-          style="margin-left: 1em">
+    style="margin-left: 1em">
     Proceed
   </button>
 </div>
