--- a/src/app/components/supporting-information/supporting-information.component.html
+++ b/src/app/components/supporting-information/supporting-information.component.html
@@ -17,9 +17,11 @@
           <mat-form-field appearance="outline" style="width:30%;">
             <mat-label>Unit</mat-label>
             <mat-select formControlName="heightUnit">
-              <mat-option *ngFor="let unit of fhirConstants.HEIGHT_UNITS" [value]="unit">
-                {{ unit.display }}
-              </mat-option>
+              @for (unit of fhirConstants.HEIGHT_UNITS; track unit) {
+                <mat-option [value]="unit">
+                  {{ unit.display }}
+                </mat-option>
+              }
             </mat-select>
           </mat-form-field>
         </div>
@@ -33,9 +35,11 @@
           <mat-form-field appearance="outline" style="width:30%;">
             <mat-label>Unit</mat-label>
             <mat-select formControlName="weightUnit">
-              <mat-option *ngFor="let unit of fhirConstants.WEIGHT_UNITS" [value]="unit">
-                {{ unit.display }}
-              </mat-option>
+              @for (unit of fhirConstants.WEIGHT_UNITS; track unit) {
+                <mat-option [value]="unit">
+                  {{ unit.display }}
+                </mat-option>
+              }
             </mat-select>
           </mat-form-field>
         </div>
@@ -57,7 +61,7 @@
           </mat-form-field>
 
           <span
-            style="margin-right: 0.2em;  margin-top: 2em; margin-left: 0.2em; font-weight: bold; font-size: x-large">/</span>
+          style="margin-right: 0.2em;  margin-top: 2em; margin-left: 0.2em; font-weight: bold; font-size: x-large">/</span>
 
           <mat-form-field appearance="outline" style="max-width: 20%">
             <mat-label>BP (DIA)</mat-label>
@@ -97,9 +101,11 @@
           <mat-form-field appearance="outline" style="width:30%;">
             <mat-label>Unit</mat-label>
             <mat-select formControlName="heightUnit">
-              <mat-option *ngFor="let unit of fhirConstants.HEIGHT_UNITS" [value]="unit">
-                {{ unit.display }}
-              </mat-option>
+              @for (unit of fhirConstants.HEIGHT_UNITS; track unit) {
+                <mat-option [value]="unit">
+                  {{ unit.display }}
+                </mat-option>
+              }
             </mat-select>
           </mat-form-field>
         </div>
@@ -113,9 +119,11 @@
           <mat-form-field appearance="outline" style="width:30%;">
             <mat-label>Unit</mat-label>
             <mat-select formControlName="weightUnit">
-              <mat-option *ngFor="let unit of fhirConstants.WEIGHT_UNITS" [value]="unit">
-                {{ unit.display }}
-              </mat-option>
+              @for (unit of fhirConstants.WEIGHT_UNITS; track unit) {
+                <mat-option [value]="unit">
+                  {{ unit.display }}
+                </mat-option>
+              }
             </mat-select>
           </mat-form-field>
         </div>
@@ -137,7 +145,7 @@
           </mat-form-field>
 
           <span
-            style="margin-right: 0.2em;  margin-top: 2em; margin-left: 0.2em; font-weight: bold; font-size: x-large">/</span>
+          style="margin-right: 0.2em;  margin-top: 2em; margin-left: 0.2em; font-weight: bold; font-size: x-large">/</span>
 
           <mat-form-field appearance="outline" style="width: 20%">
             <mat-label>BP (DIA)</mat-label>
@@ -158,7 +166,7 @@
   <span class="spacer"></span>
   <button mat-raised-button (click)="onSave()">Save</button>
   <button mat-raised-button color="primary" (click)="onProceed()"
-          style="margin-left: 1em">
+    style="margin-left: 1em">
     Proceed
   </button>
 </div>
